--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,8 @@ Getting your plumber API up and running takes a bit of fiddling around. Rather t
 4. Fiddle with your plumber function if something is off
 5. Repeat 2-4 until you get it right!
 
+![](inst/plumber_2term_lab.png)
+
 If you have ready-built plumber functions, you can use test them out directly in a single RStudio session by opening up a new terminal with `start_plumber`. I've included a two functions (`random_praise` and `random_data`) in a sample plumber file in the `inst` folder of this repo. Depending on what seed you set, the output changes:
 
 ```{r eval = FALSE}
